Correct .button min-width so changing #pause button text from 'Run'<->'Pause' does not change width and spacing of buttons

--- a/javascript/conway.css
+++ b/javascript/conway.css
@@ -84,7 +84,7 @@ p {
   cursor: pointer;
   font-size: 1.1rem;
   font-weight: bold;
-  min-width: 50px;
+  min-width: 4rem;
   padding: 0.2em;
 }
 
